--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/start.js",
   "scripts": {
     "start": "nodemon --watch server -e js,html server/start.js",
-    "testback" : "node tests/server/models/user-test.js",
+    "testback" : "mocha tests/server/test.js",
     "postinstall": "gulp build"
   },
   "engines": {
