--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "angular-ui-router": "^0.2.15",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.6.0",
-    "bluebird": "^3.3.3",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.12.0",
     "bootstrap": "^3.3.4",
     "chai": "^2.1.0",
@@ -42,6 +42,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "jquery": "^3.1.0",
     "karma": "^0.13.14",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "0.2.3",
